<resources>
    <string name="app_name">nakenChat</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="server_hint">Server</string>
    <string name="port_hint">Port</string>
    <string name="default_server">76.235.94.33</string>
    <string name="default_port">6667</string>
    <string name="switch_ssl_label">Use SSL</string>
    <string name="connect_button">Connect</string>
    <string name="exit_button">Exit</string>

    <string name="send_button">Send</string>
    <string name="message_hint">Type message…</string>
    <string name="button_w">w</string>
    <string name="button_e">e</string>
    <string name="button_t">t</string>
    <string name="button_private">p</string>
    <string name="button_percent">%</string>
    <string name="button_q">q</string>
</resources>
